force-app/main/default/objects/Sprint__c/Sprint__c.object-meta.xml
<CustomObject>
    <description>Agoura Custom Object</description>
    <label>Sprint</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Sprint Unique Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>