force-app/main/default/objects/Sprint__c/fields/Completed_Points__c.field-meta.xml
<CustomField>
    <fullName>Completed_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>