force-app/main/default/objects/Sprint__c/fields/Sprint_Goal__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Goal__c</fullName>
    <label>Sprint Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>