force-app/main/default/objects/Sprint__c/fields/Sprint_Length__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Length__c</fullName>
    <label>Sprint Length</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>