force-app/main/default/objects/Sprint__c/fields/Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Name__c</fullName>
    <label>Sprint Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>