force-app/main/default/objects/Sprint__c/fields/Sprint_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Number__c</fullName>
    <label>Sprint #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>