force-app/main/default/objects/Sprint__c/fields/Swim_Lane__c.field-meta.xml
<CustomField>
    <fullName>Swim_Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swim Lane</label>
    <referenceTo>ProjectItem__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>