force-app/main/default/objects/Sprint__c/fields/Target_Points__c.field-meta.xml
<CustomField>
    <fullName>Target_Points__c</fullName>
    <label>Target Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>