force-app/main/default/objects/Sprint__c/fields/What_can_we_do_different_next_time__c.field-meta.xml
<CustomField>
    <fullName>What_can_we_do_different_next_time__c</fullName>
    <label>What can we try different next time?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>