force-app/main/default/objects/Sprint__c/fields/What_did_not_go_well__c.field-meta.xml
<CustomField>
    <fullName>What_did_not_go_well__c</fullName>
    <label>What did not go well?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>