force-app/main/default/objects/Sprint__c/fields/Work_Days_Report__c.field-meta.xml
<CustomField>
    <fullName>Work_Days_Report__c</fullName>
    <label>Work Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>